@@ -1,3 +1,8 @@
+2010-12-05  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* unix/tcl.m4:      [Patch #3116490] cross-compile support for unix
+	* unix/configure    (autoconf-2.59)
+
 2010-12-03  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tcl.m4           [Patch #3116490] cross-compile Tcl mingw32 on unix
